<resources>
    <string name="app_name">Doces</string>
    <string name="bunner">bunner</string>
    <string name="bolo">Bolo</string>
    <string name="pizza">Pizza</string>
    <string name="pudim">Pudim</string>
    <string name="torta">Torta</string>
    <string name="banerbolo">BANERBOLO</string>
    <string name="voltardebolo">VOLTAR</string>
    <string name="bolo_de_chocolate_fofinho_sabe_um_bolo_que_voc_adota_para_a_vida_toda_esse_o_bolo_de_chocolate_oficial_da_minha_casa_fa_o_at_de_olhos_fechados_e_pode_confiar_que_esse_d_certo_nem_precisa_de_batedeira_ou_liquidificador_r_pido_pr_tico_e_todo_mundo_adora_quer_coisa_melhor_ent_o_anotem_amados_ingredientes_da_massa_x_cara_usada_de_240ml_2_ovos_1_x_cara_ch_de_leite_1_x_cara_ch_de_leo_3_colheres_sopa_de_chocolate_em_p_1_e_x_cara_ch_de_farinha_de_trigo_1_2_x_cara_ch_de_amido_de_milho_maizena_1_e_x_cara_ch_de_a_car_1_colher_sopa_de_fermento_em_p_adicione_os_l_quidos_e_misture_e_reserve_em_outro_recipiente_junte_os_ingredientes_secos_menos_o_fermento_e_depois_acrescente_os_l_quidos_reservados_por_fim_acrescente_o_fermento_e_mexa_s_para_misturar_coloque_em_forma_untada_e_enfarinha_ou_polvilhada_com_chocolate_e_leve_ao_forno_que_j_estava_preaquecido_em_180_c_por_aproximadamente_45_min_deixe_amornar_e_desenforme_cobertura_1_2_lata_de_leite_condensado_120_ml_de_leite_2_colheres_sopa_de_chocolate_em_p_1_colher_sopa_de_manteiga_ou_margarina_leve_todos_os_ingredientes_ao_fogo_m_dio_baixo_quando_ferver_retire_despeje_sobre_o_bolo">Bolo de Chocolate Fofinho - Sabe um bolo que você adota para a vida toda? Esse é o bolo de chocolate oficial da minha casa. Faço até de olhos fechados. E pode confiar que esse dá certo. Nem precisa de batedeira ou liquidificador. Rápido, prático e todo mundo adora, quer coisa melhor? Então anotem amados:Ingredientes da massa (xícara usada de 240ml): 2 ovos; 1 xícara (chá) de leite; 1 xícara (chá) de óleo; 3 colheres (sopa) de chocolate em pó; 1 e ½ xícara (chá) de farinha de trigo; 1/2 xícara(chá) de Amido de Milho (Maizena); 1 e ½ xícara (chá) de açúcar; 1 colher (sopa) de fermento em pó. Adicione os líquidos e misture e reserve. Em outro recipiente junte os ingredientes secos (menos o fermento) e depois acrescente os líquidos reservados. Por fim acrescente o fermento e mexa só para misturar. Coloque em forma untada e enfarinha (ou polvilhada com chocolate) e leve ao forno que já estava preaquecido em 180ºC por aproximadamente 45 min. Deixe amornar e desenforme. Cobertura: 1/2 lata de leite condensado; 120 ml de leite; 2 colheres (sopa) de chocolate em pó; 1 colher (sopa) de manteiga ou margarina. Leve todos os ingredientes ao fogo médio/baixo. Quando ferver retire. Despeje sobre o bolo.</string>
</resources>
