<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="15dp"
    android:layout_marginRight="15dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:orientation="vertical"
    android:id="@+id/inicio">


    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/bunner"
        app:srcCompat="@mipmap/buner" />

    <Button
        android:id="@+id/bolo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bolo"
        android:onClick="chamaBolo"/>

    <Button
        android:id="@+id/pizza"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pizza"
        android:onClick="chamaPizza"/>

    <Button
        android:id="@+id/pudim"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pudim"
        android:onClick="chamaPudim"/>

    <Button
        android:id="@+id/torta"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/torta"
        android:onClick="chamaTorta"/>
</LinearLayout>

